k8s/delivery-control/redis/redis-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-clusterip
spec:
  selector:
    app: redis-deployment
  ports:
  - port: 6379
    targetPort: 6379
